# httpclient_wasmedge_socket

./: CMakeLists.txt  README.md  http_get.cpp  http_get.h
libfetch/: CMakeLists.txt  common.c  common.h  fetch.c  file.c  ftp.c  ftperr.h  http.c  httperr.h  openssl-compat.c  openssl-compat.h
libfetch/include/fetch/: fetch.h
wasmedge_wasi_socket_c/: CMakeLists.txt  wasi_socket_ext.c
wasmedge_wasi_socket_c/include/: netdb.h  wasi_socket_ext.h
